fix table wrapping mobile

--- a/_includes/css/dt.css
+++ b/_includes/css/dt.css
@@ -752,7 +752,6 @@ footer ul.quicklinks {
 .properties-modal .modal-content table td {
     text-align: left;
     padding: 5px;
-    white-space: nowrap;
 }
 
 .properties-modal .modal-content img {
